// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list renders correctly 1`] = `
<div
  className="sc-fznZeY iYfOwR"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="sc-AxheI sc-fzokOt jLmloA"
  >
    <div>
      <div
        className="sc-fznyAO gJSQLJ"
      >
        <h2
          className="sc-fzplWN fKnvyl"
        >
          Users
        </h2>
        <button
          className="sc-AxjAm sc-AxirZ txvCN"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           Create User
        </button>
      </div>
      <div
        className="sc-fznKkj gnekHp"
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 2`] = `
<div
  className="sc-fznZeY iYfOwR"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="sc-AxheI sc-fzokOt jLmloA"
  >
    <div>
      <div
        className="sc-fznyAO gJSQLJ"
      >
        <h2
          className="sc-fzplWN fKnvyl"
        >
          Users
        </h2>
        <button
          className="sc-AxjAm sc-AxirZ txvCN"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           Create User
        </button>
      </div>
      <div
        className="sc-fznKkj gnekHp"
      >
        <div
          className="sc-AxiKw jxeMgG"
        >
          <p
            className="sc-AxhCb klGZiV"
          >
            test
          </p>
        </div>
        <div
          className="sc-AxiKw jxeMgG"
        >
          <p
            className="sc-AxhCb klGZiV"
          >
            admin
          </p>
          <p
            className="sc-AxhUy hvjDNC"
          >
            admin
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
